LUCENE-3807: Cleanup Suggest / Lookup API
git-svn-id: https://svn.apache.org/repos/asf/lucene/dev/trunk@1296268 13f79535-47bb-0310-9956-ffa450edef68